--- a/src/styles.css
+++ b/src/styles.css
@@ -37,19 +37,19 @@ p {
   line-height: 30px;
 }
 
-.hero {
+.about {
   background: var(--secondary-colour);
   text-align: center;
   padding: 80px 20px;
 }
 
-.hero p {
+.about p {
   font-size: 36px;
   font-weight: bold;
   margin: 0;
 }
 
-.hero h2 {
+.about h2 {
   font-family: var(--heading-font-family);
   font-weight: normal;
   font-size: 24px;
@@ -256,3 +256,378 @@ footer .social-links a:hover {
   }
 }
 
+
+
+
+/***************************************************/
+/* Tech skills section */
+
+.tech-skills-section {
+  background-color: var(--cream-green-A);
+}
+
+.tech-skills-container {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.skills-container {
+  width: 100%;
+  border-radius: 75px;
+  box-shadow: 0px 0px 20px rgba(85, 81, 55, 0.25);
+  background-color: var(--primary-cream);
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 50px;
+  padding-left: 25px;
+  padding-right: 25px;
+  justify-content: space-around;
+}
+
+.sm-skills-title-container {
+  display: none;
+}
+
+.skill-item {
+  background-color: transparent;
+  border: 0;
+  width: 10.5%;
+  margin-left: 15px;
+  margin-right: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.skill-text {
+  text-align: center;
+  font-weight: 500;
+}
+
+.skills-Btn {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 20px;
+}
+
+.sm-skills-btn-container {
+  display: none;
+}
+
+#skills-view-more-desktop-btn,
+#skills-view-more-mobile-btn {
+  margin-left: 1.5%;
+  margin-right: 1.5%;
+}
+
+/***************************************************/
+/* Projects section */
+.project-section {
+  background-color: var(--primary-cream);
+}
+
+.project-container {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.project-Btn {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.project-title {
+  color: var(--green-darkest);
+}
+
+.project-carousel-container {
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.project-carousel {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 40px;
+  scrollbar-width: thin;
+  overflow-x: auto;
+  scroll-snap-type: inline mandatory;
+  list-style-type: none;
+  padding-top: 25px;
+  padding-bottom: 30px;
+  padding-left: 30px;
+  padding-right: 60px;
+}
+
+.project-carousel-right-padding {
+  padding: 10px;
+}
+
+.project {
+  width: 29%;
+  background-color: var(--primary-cream);
+  padding: 30px;
+  border-radius: 50px;
+  box-shadow: 5px 5px 30px rgba(85, 81, 55, 0.25);
+  border: 5px solid var(--primary-cream);
+  justify-content: space-between;
+}
+
+.project:hover {
+  border: 5px solid var(--primary-green);
+}
+
+.project-skill {
+  height: 25px;
+  padding-right: 10px;
+  margin-bottom: 10px;
+}
+
+.project-image {
+  width: 40%;
+  box-shadow: 5px 5px 30px rgba(85, 81, 55, 0.25);
+}
+
+.diral {
+  border-radius: 15px;
+}
+
+.quizzical {
+  border-radius: 15px;
+}
+
+.artfolio {
+  border-radius: 100px;
+}
+
+.project-content {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.project-skills {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.projects-title {
+  padding-top: 50px;
+  padding-bottom: 25px;
+  font-size: 40px;
+}
+
+.project-title {
+  font-weight: 700;
+}
+
+.project-card-description {
+  padding-bottom: 10px;
+}
+
+.project-description-container {
+  height: 95px;
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 10px;
+  text-overflow: ellipsis;
+  white-space: normal;
+  position: relative;
+}
+
+.github-repo-btn-container {
+  padding-top: 1%;
+  padding-bottom: 3%;
+}
+
+.project-card-gradient {
+  background-image: linear-gradient(to top, var(--primary-cream), transparent);
+  height: 50%;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+.carousel-gradient {
+  background-image: linear-gradient(to left, var(--primary-cream), transparent);
+  height: 100%;
+  width: 10%;
+  position: absolute;
+  right: 0;
+}
+
+.project-view-more-button {
+  width: fit-content !important;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.has-scrollbar::-webkit-scrollbar {
+  height: 3px;
+}
+
+.has-scrollbar::-webkit-scrollbar-button {
+  color: var(--green);
+  width: 40px;
+}
+
+/* Projects page */
+
+.project-about-section {
+  background-color: var(--primary-cream);
+}
+
+.project-about-container {
+  padding-bottom: 50px;
+}
+
+.project-cards-section {
+  background-color: var(--cream-green-A);
+
+  box-shadow: 0px 0px 30px 10px rgba(85, 81, 55, 0.25);
+  z-index: 1;
+  position: relative;
+}
+
+.project-cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  min-width: 30%;
+  gap: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  justify-content: center;
+}
+
+.project-card {
+  min-width: 38%;
+  background-color: var(--primary-cream);
+  padding: 30px;
+  border-radius: 50px;
+  box-shadow: 5px 5px 30px rgba(85, 81, 55, 0.25);
+  border: 5px solid var(--primary-cream);
+  justify-content: center;
+}
+
+.project-card:hover {
+  border: 5px solid var(--primary-green);
+}
+
+.view-all-projects-btn {
+  margin-left: 1.5%;
+  margin-right: 1.5%;
+}
+
+.footer-space-section {
+  height: 200px;
+  background-color: var(--primary-cream);
+}
+
+/***************************************************/
+/* Experience section */
+
+.sm-experience-container {
+  display: none;
+}
+
+.experience-section {
+  background-color: var(--primary-green);
+  color: var(--primary-cream);
+}
+
+.experience-title {
+  color: var(--primary-cream);
+  padding-top: 100px;
+}
+
+.company-col {
+  display: grid;
+  justify-content: end;
+  text-align: end;
+  align-content: flex-start;
+}
+
+.company-logo-container {
+  background-color: var(--cream-green-A);
+  border-radius: 50px;
+  width: 200px;
+  height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.company-logo {
+  width: 150px;
+}
+
+.company-name {
+  padding-top: 15px;
+  font-weight: 600;
+}
+
+.company-period {
+  margin-bottom: 0.5rem;
+}
+
+.company-length {
+  margin-top: 0;
+}
+
+.job-title {
+  font-weight: 700;
+}
+
+.job-detail-1 {
+  font-weight: 500;
+}
+
+.job-detail-2 {
+  font-weight: 400;
+}
+
+.last-job-detail {
+  padding-bottom: 50px;
+}
+
+.line-tip {
+  height: 300%;
+  width: 10px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  background-color: var(--cream-green-A);
+  display: flex;
+  margin: auto;
+  color: var(--cream-green-A);
+}
+
+.line {
+  height: 200%;
+  display: flex;
+  width: 10px;
+  background-color: var(--cream-green-A);
+  margin: auto;
+}
+
+.circle {
+  width: 30px;
+  height: 30px;
+  border-radius: 20px;
+  background-color: var(--cream-green-A);
+  margin: auto;
+}
+
+.circle-small {
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+  background-color: var(--cream-green-A);
+  padding: 2px;
+  margin-top: 7.5px;
+  margin: auto;
+}
